src/objects/Product_Service_Level_Criteria__c.object
<CustomObject>
    <description>Created as part of SIR 1331(2016.11): This object contains the fields required for identifying the product service level.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Created as part of SIR 1331(2016.11): This field contains the description for each rule record.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Created as part of SIR 1331(2016.11): This field is used for storing Product categories</description>
        <label>Product Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amplifiers</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Data converters</fullName>
                </value>
                <value>
                    <fullName>Display drivers</fullName>
                </value>
                <value>
                    <fullName>ESD, EMI and signal conditioning</fullName>
                </value>
                <value>
                    <fullName>Lighting driver and controller ICs</fullName>
                </value>
                <value>
                    <fullName>Media processors</fullName>
                </value>
                <value>
                    <fullName>MOSFETs</fullName>
                </value>
                <value>
                    <fullName>AM/FM Radio and Audio</fullName>
                </value>
                <value>
                    <fullName>Audio Amplifiers</fullName>
                </value>
                <value>
                    <fullName>Multi Standard Digital Radio</fullName>
                </value>
                <value>
                    <fullName>Silicon Tuners</fullName>
                </value>
                <value>
                    <fullName>ESD Protection</fullName>
                </value>
                <value>
                    <fullName>Car Access and Immobilizers</fullName>
                </value>
                <value>
                    <fullName>NFC and Reader ICs</fullName>
                </value>
                <value>
                    <fullName>Smart Label and Tag ICs</fullName>
                </value>
                <value>
                    <fullName>Interface and System Management</fullName>
                </value>
                <value>
                    <fullName>ARM Processors</fullName>
                </value>
                <value>
                    <fullName>Wireless Power Receivers</fullName>
                </value>
                <value>
                    <fullName>Wireless Power Transmitters</fullName>
                </value>
                <value>
                    <fullName>AC-to-DC Solutions</fullName>
                </value>
                <value>
                    <fullName>Energy Measurement ICs</fullName>
                </value>
                <value>
                    <fullName>Linear Voltage Regulators</fullName>
                </value>
                <value>
                    <fullName>Motor Drive ICs</fullName>
                </value>
                <value>
                    <fullName>RF Power Transistors</fullName>
                </value>
                <value>
                    <fullName>RF Amplifiers - Low / Medium power</fullName>
                </value>
                <value>
                    <fullName>Control Circuits</fullName>
                </value>
                <value>
                    <fullName>Mixers</fullName>
                </value>
                <value>
                    <fullName>PLLs and Oscillators</fullName>
                </value>
                <value>
                    <fullName>Transistors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Service_Level__c</fullName>
        <description>Created as part of SIR 1331(2016.11): This field contains the product service level value</description>
        <label>Product Service Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub__c</fullName>
        <description>Created as part of SIR 1331(2016.11): This field contains values of product sub category.</description>
        <label>Product Level 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-Axis Accelerometers</fullName>
                </value>
                <value>
                    <fullName>2-Axis Accelerometers</fullName>
                </value>
                <value>
                    <fullName>3-Axis Accelerometers</fullName>
                </value>
                <value>
                    <fullName>AC-DC Controllers</fullName>
                </value>
                <value>
                    <fullName>AC-DC Controllers with Integrated PFC</fullName>
                </value>
                <value>
                    <fullName>AC-DC Controllers with Integrated Power Switch</fullName>
                </value>
                <value>
                    <fullName>AC LED Driver ICs, Dimmable</fullName>
                </value>
                <value>
                    <fullName>AC-to-DC solutions</fullName>
                </value>
                <value>
                    <fullName>Analog Expert Software and Tools</fullName>
                </value>
                <value>
                    <fullName>Analog Toolbox</fullName>
                </value>
                <value>
                    <fullName>ASK</fullName>
                </value>
                <value>
                    <fullName>Audio Amplifiers for Portable Devices</fullName>
                </value>
                <value>
                    <fullName>Audio converters</fullName>
                </value>
                <value>
                    <fullName>Automotive NFC</fullName>
                </value>
                <value>
                    <fullName>Barometric Pressure 15 to 115 kPa</fullName>
                </value>
                <value>
                    <fullName>Battery Cell Controllers</fullName>
                </value>
                <value>
                    <fullName>Battery Chargers</fullName>
                </value>
                <value>
                    <fullName>Battery Sensors</fullName>
                </value>
                <value>
                    <fullName>Bluetooth Low Energy (BLE)</fullName>
                </value>
                <value>
                    <fullName>Cable and terrestrial silicon tuners</fullName>
                </value>
                <value>
                    <fullName>CAN Protocol Controllers</fullName>
                </value>
                <value>
                    <fullName>Car radio &amp; audio DSP solutions</fullName>
                </value>
                <value>
                    <fullName>CFL and HF-TL Drivers - Dimmable</fullName>
                </value>
                <value>
                    <fullName>CFL and HF-TL Drivers - Fixed Output</fullName>
                </value>
                <value>
                    <fullName>Class-AB</fullName>
                </value>
                <value>
                    <fullName>Class-AB (car radio)</fullName>
                </value>
                <value>
                    <fullName>Class-D</fullName>
                </value>
                <value>
                    <fullName>Class-D (car radio)</fullName>
                </value>
                <value>
                    <fullName>CodeWarrior Development Tools</fullName>
                </value>
                <value>
                    <fullName>Community Boards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Created as part of SIR 1331(2016.11):To display products.</description>
        <label>Product Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audio and Media Processing</fullName>
                </value>
                <value>
                    <fullName>Identification and Security</fullName>
                </value>
                <value>
                    <fullName>Interface and Connectivity</fullName>
                </value>
                <value>
                    <fullName>Microcontrollers and Processors</fullName>
                </value>
                <value>
                    <fullName>Power Management</fullName>
                </value>
                <value>
                    <fullName>RF</fullName>
                </value>
                <value>
                    <fullName>Sensors</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Single Chip Modules</fullName>
                </value>
                <value>
                    <fullName>Software and HW Development Tools</fullName>
                </value>
                <value>
                    <fullName>Wireless Connectivity</fullName>
                </value>
                <value>
                    <fullName>Discretes and Logic</fullName>
                    <isActive>false</isActive>
                    <label>Discretes and Logic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Service Level Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Sub__c</columns>
        <columns>Product_Service_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PSL-{000000}</displayFormat>
        <label>PSL Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Service Level Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>